# agg-gui

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  agg-gui-dev-plan.md  egui-demo-reimplementation-plan.md  egui_parity_audit.md  lcd-subpixel-compositing.md  svg_agg_plan.md  tests_to_write.md  todo.md
.cargo/: config.toml
agg-gui/: Cargo.toml  README.md
agg-gui/src/: animation.rs  app_state.rs  clipboard.rs  color.rs  cursor.rs  device_scale.rs  draw_ctx.rs  event.rs  focus.rs  font_settings.rs  framebuffer.rs  geometry.rs  gfx_ctx.rs  image_cache.rs  input_profile.rs  layout_props.rs  lcd_coverage.rs  lcd_gfx_ctx.rs  lib.rs  paints.rs  persistence.rs  pixel_bounds.rs  platform.rs  screenshot.rs  svg.rs  tests.rs  text.rs  text_lcd.rs  theme.rs  timestep.rs  touch_state.rs  undo.rs  ux_scale.rs  wasm_clipboard.rs  web_adapter.rs  widget.rs  winit_adapter.rs
agg-gui/src/gfx_ctx/: draw_impl.rs  layers.rs  sampled.rs  stroke.rs
agg-gui/src/gl_renderer/: aa_feather_tests.rs  aa_texture_mesh.rs  glyph_cache.rs  mod.rs  tess2_bridge.rs
agg-gui/src/lcd_coverage/: tests.rs
agg-gui/src/lcd_gfx_ctx/: gradient.rs  image.rs  stroke.rs
agg-gui/src/snap/: engine.rs  mod.rs  model.rs  overlay.rs  registry.rs  tests.rs
agg-gui/src/snap/engine/: spacing.rs
agg-gui/src/svg/: compare.rs  core_tests.rs  gradient_tests.rs  image_tests.rs  opacity_tests.rs  paint.rs  pattern.rs  render_tree.rs
agg-gui/src/tests/: backbuffer_scale.rs  color_wheel_picker.rs  drawing.rs  focus.rs  inspector_hover.rs  inspector_tree.rs  label_theme.rs  menu_hidpi_scale.rs  on_screen_keyboard.rs  reflect_roundtrip.rs  retained_layers.rs  scroll_view.rs  touch_scroll.rs  tree_view.rs  widgets.rs  window_layout.rs  window_maximize.rs  windowing.rs
agg-gui/src/tests/layout_lcd/: layout.rs
agg-gui/src/tests/widgets/: button_touch.rs  combo_popup.rs
agg-gui/src/text/: bezier_flat.rs  tests.rs
agg-gui/src/widget/: app.rs  backbuffer.rs  keyboard_scroll.rs  paint.rs  tree.rs
agg-gui/src/widget/app/: tree_paths.rs
agg-gui/src/widgets/: button.rs  button_events.rs  button_theme.rs  checkbox.rs  chevron.rs  collapsing_header.rs  color_picker.rs  color_wheel_picker.rs  combo_box.rs  conditional.rs  container.rs  drag_value.rs  flex.rs  flex_row.rs  hyperlink.rs  image_view.rs  inspector.rs  inspector_props.rs  label.rs  markdown.rs  mod.rs  performance.rs  primitives.rs  progress_bar.rs  qr_view.rs  radio_group.rs  resize.rs  scroll_view.rs  scrollbar.rs  slider.rs  spacers.rs  splitter.rs  tab_view.rs  text_area.rs  text_field.rs  text_field_core.rs  toggle_switch.rs  tooltip.rs  window.rs  window_title_bar.rs
agg-gui/src/widgets/color_picker/: widget_impl.rs
agg-gui/src/widgets/color_wheel_picker/: alpha_track.rs  dialog.rs  hsv_math.rs  hue_wheel.rs  preview_swatches.rs  sv_triangle.rs  tests.rs  widget_impl.rs
agg-gui/src/widgets/combo_box/: popup_paint.rs
agg-gui/src/widgets/inspector/: mod.rs  widget_impl.rs
agg-gui/src/widgets/markdown/: event.rs  image_context.rs  image_loader.rs  layout.rs  paint.rs  parse.rs  rich_html.rs  selection.rs
agg-gui/src/widgets/menu/: geometry.rs  mod.rs  model.rs  paint.rs  state.rs  strip.rs  widget.rs
agg-gui/src/widgets/on_screen_keyboard/: events.rs  key.rs  layouts.rs  mod.rs  state.rs  style.rs
agg-gui/src/widgets/performance/: run_mode.rs
agg-gui/src/widgets/property_row/: editor.rs  mod.rs
agg-gui/src/widgets/scroll_view/: widget_impl.rs
agg-gui/src/widgets/table/: body.rs  config.rs  mod.rs  state.rs
agg-gui/src/widgets/text_area/: widget_impl.rs
agg-gui/src/widgets/text_field/: binding.rs  clipboard.rs  filter.rs  keyboard_mode.rs  layout_builders.rs  theme.rs  widget_impl.rs
agg-gui/src/widgets/tree_view/: drag.rs  mod.rs  node.rs  row.rs  widget_impl.rs
agg-gui/src/widgets/window/: builder.rs  chrome.rs  paint.rs  widget_impl.rs
agg-gui/tests/: file_line_count.rs  stack_raise_overhang.rs  svg_regression.rs
demo-gl/: Cargo.toml
demo-gl/src/: bar_grid.rs  ctx_core.rs  draw_ctx_impl.rs  frame.rs  gl_support.rs  gradient.rs  lib.rs  overlays.rs  shaders.rs  text_render.rs
demo-gl/src/ctx_core/: layers.rs  lcd.rs  primitives.rs
demo-native/: Cargo.toml  build.rs
demo-native-wgpu/: Cargo.toml
demo-native-wgpu/src/: main.rs
demo-native/assets/: app-icon-256.rgba  app-icon.icns
demo-native/src/: cube_widget.rs  main.rs  rendering.rs
demo-native/src/screen_share/: bridge.rs  chunk.rs  mod.rs  peer_id.rs  phone_server.rs  web_build.rs
demo-ui/: Cargo.toml
demo-ui/src/: api.rs  app_builder.rs  app_builder_tests.rs  backend_panel.rs  content.rs  font_init.rs  font_picker.rs  lib.rs  rendering_test.rs  screen_codec.rs  screen_share.rs  shell.rs  sidebar.rs  specs.rs  state.rs  top_bar.rs  windows.rs
demo-ui/src/backend_panel/: widgets.rs
demo-ui/src/rendering_test/: color.rs
demo-ui/src/windows/: animation.rs  basic.rs  code_example.rs  font_book.rs  frame_demo.rs  gallery.rs  interaction.rs  lion.rs  menu_demo.rs  misc.rs  mobile_keyboard.rs  screen_share.rs  screenshot_demo.rs  scrolling.rs  system.rs  tests.rs  text_demos.rs  truetype_lcd.rs
demo-ui/src/windows/interaction/: drag_and_drop.rs
demo-ui/src/windows/misc/: misc_demos.rs
demo-ui/src/windows/scrolling/: appearance.rs  bidirectional.rs  helpers.rs  large_canvas.rs  many_lines.rs  mod.rs  scroll_to.rs  stick_to_end.rs
demo-ui/src/windows/tests/: svg.rs
demo-ui/src/windows/text_demos/: dialogs.rs  multi_touch.rs  strip_table.rs  table_demo.rs  text_layout.rs
demo-ui/tests/: window_resize.rs  window_resize_auto_size.rs
demo-ui/tests/window_resize/: w1.rs
demo-wasm/: Cargo.toml
demo-wasm/src/: clipboard_exports.rs  fonts.rs  gl_gfx_ctx.rs  gl_resources.rs  input.rs  lib.rs  platform.rs  screen_share.rs
demo-wgpu/: Cargo.toml
demo-wgpu/src/: aa_step.rs  bar_grid.rs  bar_grid_math.rs  bar_grid_render.rs  ctx_core.rs  custom_render.rs  draw_ctx_impl.rs  end_frame.rs  end_frame_prepare.rs  frame.rs  gradient.rs  image_blit.rs  layers.rs  lib.rs  msaa.rs  pipelines.rs  primitives.rs  shaders.rs  ssaa.rs  text_render.rs
(+49 files in other folders)
