[workspace]
members = ["agg-gui", "demo-native", "demo-wasm"]
resolver = "2"

# ---------------------------------------------------------------------------
# Local development overrides
# ---------------------------------------------------------------------------
# Uncomment these to develop agg-gui alongside the library sources.
# Leave commented for normal builds (CI uses the crates.io versions).
#
# [patch.crates-io]
# Uncomment to develop against local sources:
# agg-rust = { path = "../../agg-rust" }
# clipper2-rust = { path = "../../clipper2-rust" }
# tess2-rust = { path = "../tess2-rust" }
