[workspace]
members = ["agg-gui", "demo-native", "demo-wasm", "demo-gl", "demo-ui"]
default-members = ["agg-gui", "demo-native", "demo-gl", "demo-ui"]
resolver = "2"

# ---------------------------------------------------------------------------
# Optimize dependencies in debug builds so the GL/tess2/rustybuzz render path
# runs at near-release speed while your own code stays unoptimized (fast
# incremental compile, usable backtraces).
# ---------------------------------------------------------------------------

[profile.dev.package."*"]
opt-level = 2

# ---------------------------------------------------------------------------
# Local development overrides
# ---------------------------------------------------------------------------
# Uncomment these to develop agg-gui alongside the library sources.
# Leave commented for normal builds (CI uses the crates.io versions).
#
# [patch.crates-io]
# Uncomment to develop against local sources:
# agg-rust = { path = "../../agg-rust" }
# clipper2-rust = { path = "../../clipper2-rust" }
# tess2-rust = { path = "../tess2-rust" }

