[package]
name = "agg-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "A Rust GUI framework built on AGG (Anti-Grain Geometry)"
repository = "https://github.com/larsbrubaker/agg-gui"

[dependencies]
agg-rust = "1.0.2"
clipper2-rust = "1.0.3"
ttf-parser = "0.25"
rustybuzz = "0.20"
tess2-rust = "1.0.3"
arboard  = { version = "3", optional = true }
web-time = "1"
pulldown-cmark = "0.11"

[features]
clipboard = ["dep:arboard"]
