[package]
name = "demo-gl"
version = "0.1.0"
edition = "2021"
description = "Shared GlGfxCtx — DrawCtx implementation via glow (WebGL2 + native OpenGL)"

[dependencies]
agg-gui  = { path = "../agg-gui" }
glow     = "0.13"
bytemuck = "1"
# Drop-in replacement for `std::time::Instant` that works on wasm32 —
# stdlib `Instant` panics in the browser sandbox.  Used by the shared
# bar-grid demo widget for the wave-animation time uniform.
web-time = "1"
