[package]
name = "demo-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo-native"
path = "src/main.rs"

[dependencies]
agg-gui      = { path = "../agg-gui", features = ["clipboard", "winit-adapter"] }
demo-gl      = { path = "../demo-gl" }
demo-ui      = { path = "../demo-ui" }
bytemuck     = "1"
winit        = "0.30"
glutin       = "0.32"
glutin-winit = "0.5"
glow         = "0.13"
raw-window-handle = "0.6"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.bundle]
name = "agg-gui Demo"
identifier = "com.matterhackers.agg-gui.demo"
icon = [
    "assets/app-icon.icns",
    "assets/app-icon.ico",
    "assets/app-icon.png",
]
