[package]
name = "demo-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo-native"
path = "src/main.rs"

[features]
default = ["reflect"]
reflect = ["agg-gui/reflect", "demo-wgpu/reflect", "demo-ui/reflect"]

[dependencies]
agg-gui   = { path = "../agg-gui", features = ["clipboard", "winit-adapter"] }
demo-wgpu = { path = "../demo-wgpu" }
demo-ui   = { path = "../demo-ui" }
winit     = "0.30"
wgpu      = { version = "29", default-features = false, features = ["wgsl", "vulkan", "dx12", "metal"] }
pollster  = "0.4"
raw-window-handle = "0.6"
web-time  = "1"
# Screen Share demo: LAN phone server + WebRTC signaling (adapted from Marbles)
# + JPEG frame decode. webrtc-rs is heavy but is the "socket logic from
# Marbles" this demo reuses; it only lands in the native shell.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
webrtc = "0.11"
bytes = "1"
serde_json = "1"
rand = "0.8"
local-ip-address = "0.6"
# gzip the large web assets (8.7 MB wasm) for the Screen Share phone server.
flate2 = "1"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.bundle]
name = "agg-gui Demo"
identifier = "com.matterhackers.agg-gui.demo"
icon = [
    "assets/app-icon.icns",
    "assets/app-icon.ico",
    "assets/app-icon.png",
]
