[package]
name = "demo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["reflect"]
reflect = ["agg-gui/reflect", "demo-gl/reflect", "demo-ui/reflect"]

[dependencies]
agg-gui                 = { path = "../agg-gui" }
demo-gl                 = { path = "../demo-gl" }
demo-ui                 = { path = "../demo-ui" }
wasm-bindgen            = "0.2"
glow                    = "0.13"
js-sys                  = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version  = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Storage",
    "Location",
    "console",
]
