[package]
name = "demo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["reflect"]
reflect = ["agg-gui/reflect", "demo-wgpu/reflect", "demo-ui/reflect"]

[dependencies]
agg-gui                  = { path = "../agg-gui" }
demo-wgpu                = { path = "../demo-wgpu" }
demo-ui                  = { path = "../demo-ui" }
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
js-sys                   = "0.3"
console_error_panic_hook = "0.1"

[dependencies.wgpu]
version = "29"
default-features = false
features = ["wgsl", "webgl"]

[dependencies.web-sys]
version  = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Storage",
    "Location",
    "console",
]
